--- a/po/es.po
+++ b/po/es.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-19 20:03-0400\n"
+"POT-Creation-Date: 2025-05-20 11:33-0400\n"
 "PO-Revision-Date: 2024-05-01 14:33+0000\n"
 "Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/protonplus/"
@@ -345,6 +345,16 @@ msgstr ""
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
+msgstr ""
+"Herramienta de compatibilidad de Steam para ejecutar juegos de Windows con "
+"mejoras sobreProton predeterminado de Valve."
+
+#: src/models/runners/proton-em.vala:6
+#, fuzzy
+msgid ""
+"Steam compatibility tool for running Windows games with improvements over "
+"Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
+"wayland tweaks."
 msgstr ""
 "Herramienta de compatibilidad de Steam para ejecutar juegos de Windows con "
 "mejoras sobreProton predeterminado de Valve."
