--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-19 20:03-0400\n"
+"POT-Creation-Date: 2025-05-20 11:33-0400\n"
 "PO-Revision-Date: 2024-10-03 01:10+0200\n"
 "Last-Translator: Johnny Arcitec <Arcitec@users.noreply.hosted.weblate.org>\n"
 "Language-Team: Swedish <https://hosted.weblate.org/projects/protonplus/"
@@ -334,6 +334,16 @@ msgstr ""
 msgid ""
 "Steam compatibility tool from the CachyOS Linux distribution for running "
 "Windows games with improvements over Valve's default Proton."
+msgstr ""
+"Steam-kompatibilitetsverktyg för att köra Windows-spel med förbättringar "
+"jämfört med Valves egna Proton."
+
+#: src/models/runners/proton-em.vala:6
+#, fuzzy
+msgid ""
+"Steam compatibility tool for running Windows games with improvements over "
+"Valve's default Proton. By Etaash Mathamsetty adding FSR4 support and wine "
+"wayland tweaks."
 msgstr ""
 "Steam-kompatibilitetsverktyg för att köra Windows-spel med förbättringar "
 "jämfört med Valves egna Proton."
